--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_NAME=Sesame
 NODE_PATH=src/
 REACT_APP_SHOPDOMAIN_HEADER=M-Shop-Domain
-REACT_APP_BASE_URL=http://localhost:3001/
+REACT_APP_BASE_URL=https://dataproxy-test.herokuapp.com/
 REACT_APP_APP_NAMES=EziCompare,Negotiation
 SHOPIFY_API_VERSION=2019-04
 DATAPROXY_URL=https://test.mevry.com/dataproxy/
