--- a/.env
+++ b/.env
@@ -1,13 +1,9 @@
 REACT_APP_NAME=Sesame
 NODE_PATH=src/
-REACT_APP_SHOPDOMAIN_HEADER=M-Shop-Domain
-REACT_APP_BASE_URL=https://dataproxy-test.herokuapp.com/
-REACT_APP_APP_NAMES=EziCompare,Negotiation
-SHOPIFY_API_VERSION=2019-04
-DATAPROXY_URL=https://test.mevry.com/dataproxy/
+MONGOLAB_URI=mongodb://tora:Nguyendinhtin2701@ds133162.mlab.com:33162/awesome-app
+REACT_APP_BASE_URL=http://localhost:3001/
 DATAPROXY_USER=awesomeproxytestuser
 DATAPROXY_PASSWORD=awesomeproxytestpassword
-APPS_DATA={"ezicompare":{"url":"https://test.mevry.com/ezicompare/", "apiKey":"c600a5405df1c7d948ddf12a843d2669", "globalVar":"mevryezicompare"}}
 JWT_SECRET=NO_ONE_KNOW
 MAIL_SMTP_HOST=auth.smtp.1and1.fr
 MAIL_SMTP_PORT=465
