--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.5.0",
     "mocha": "^6.2.0",
+    "mongoose": "^5.7.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.3.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
