--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_NAME=Sesame
 NODE_PATH=src/
 MONGOLAB_URI=mongodb://tora:Nguyendinhtin2701@ds133162.mlab.com:33162/awesome-app
-REACT_APP_BASE_URL=https://dataproxy-test.herokuapp.com
+REACT_APP_BASE_URL=https://dataproxy-test.herokuapp.com/
 DATAPROXY_USER=awesomeproxytestuser
 DATAPROXY_PASSWORD=awesomeproxytestpassword
 JWT_SECRET=NO_ONE_KNOW
