--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ MAIL_USERNAME=dev@mevry.com
 MAIL_PASSWORD=dontknow
 REACT_APP_ADMIN_EMAIL=dev@mevry.com
 REACT_APP_ADMIN_NAME=dev
+MONGOLAB_URI=mongodb://tora:Nguyendinhtin2701@ds133162.mlab.com:33162/awesome-app
